--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ edition = "2021"
 
 [dependencies]
 macroquad = "0.4"
+rust_decimal = "1.35"
+rust_decimal_macros = "1.35"
 
 [profile.release]
 opt-level = 3
