--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,27 @@
 [package]
-name = "Calcurus"
+name = "calcurus-iced"
+authors = ["Suyog Tandel(RedddFoxxyy)"]
+license-file = "LICENSE-CC"
+version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-macroquad = "0.4.13"
+# iced = { version = "0.13.1", features = ["image", "debug", "smol"] }
+iced = "0.13.1"
 rust_decimal = "1.36.0"
 rust_decimal_macros = "1.36.0"
+#tokio = "1.44.1"
+futures = "0.3.31"
 
 [profile.release]
-opt-level = 3
-debug = false
-lto = true
-panic = 'abort'
-codegen-units = 1
+codegen-units = 1 # Allows LLVM to perform better optimization.
+lto = true        # Enables link-time-optimizations.
+opt-level = 3     # Prioritizes speed. Use `z` if you prefer small binary size.
+panic = "abort" # Higher performance by disabling panic handlers.
+strip = true # Ensures debug symbols are removed.
+
+[profile.dev]
+codegen-units = 256
+lto = false        # Disables link-time-optimizations.
+opt-level = 0
+incremental = true # Enables incremental compilation.
