--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "calcurus-iced"
+name = "Calcurus"
 authors = ["Suyog Tandel(RedddFoxxyy)"]
 license-file = "LICENSE-CC"
 version = "0.1.0"
@@ -7,7 +7,8 @@ edition = "2024"
 
 [dependencies]
 # iced = { version = "0.13.1", features = ["image", "debug", "smol"] }
-iced = "0.13.1"
+iced = { version = "0.13.1", features = ["web-colors", "webgl"] }
+# iced = "0.13.1"
 rust_decimal = "1.36.0"
 rust_decimal_macros = "1.36.0"
 #tokio = "1.44.1"
