--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,9 @@ version = "0.1.3"
 edition = "2024"
 
 [dependencies]
-# iced = { version = "0.13.1", features = ["image", "debug", "smol"] }
-iced = { version = "0.13.1", features = ["web-colors", "webgl"] }
-# iced = "0.13.1"
+iced = { git= "https://github.com/iced-rs/iced", features = ["web-colors", "webgl"] }
 rust_decimal = { version = "1.36.0", features = ["std", "maths"]}
 rust_decimal_macros = "1.36.0"
-#tokio = "1.44.1"
-futures = "0.3.31"
 
 [profile.release]
 codegen-units = 1 # Allows LLVM to perform better optimization.
