chore: comment out `WGPU_BACKEND` in config, clean up unused import in main.rs, fix typos, and bump version to 0.3.0 in Cargo.toml

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,5 +2,5 @@
 # Uncomment to set ICED Renderer backend to software renderer tiny-skia.
 # ICED_BACKEND = "tiny-skia"
 # Using vulkan as it uses less ram compared to opengl or dx11.
-WGPU_BACKEND = "opengl"
+#WGPU_BACKEND = "opengl"
 #WINIT_UNIX_BACKEND= "x11"
