feat: add AppImage packaging support, integrate window icons, and update README with installation details

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /.vscode
 /.idea
 /target
-/target
 Cargo.lock
 *.lock
 /dist
+/packaging/appimage/AppDir
+/packaging/appimage/appimagetool-x86_64.AppImage
+/packaging/appimage/Calcurus.AppImage
+/packaging/package.sh
