--- a/.github/workflows/wasm_release.yml
+++ b/.github/workflows/wasm_release.yml
@@ -35,7 +35,7 @@ jobs:
 
       # Step 5: Build your project in release mode
       - name: Build with Trunk
-        run: trunk build --public-url /Calcurus/
+        run: trunk build --cargo-profile wasm-release --public-url /Calcurus/
 
       # Step 6: Deploy the contents of the dist folder to the gh-pages branch
       - name: Deploy to GitHub Pages
