--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,10 +24,11 @@ lto = false        # Disables link-time-optimizations.
 opt-level = 0
 incremental = true # Enables incremental compilation.
 
-[profile.wasm-dev]
-inherits = "dev"
+[profile.wasm-release]
+inherits = "release"
 codegen-units = 1
-opt-level = 0
+lto = true
+opt-level = 3
 panic = "abort"
 strip = true
 
