--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2024"
 
 [dependencies]
 # iced = { version = "0.13.1", features = ["image", "debug", "smol"] }
-iced = { version = "0.13.1", features = ["web-colors", "webgl", "advanced", "image"] }
+iced = { version = "0.13.1", features = ["web-colors", "webgl", "advanced", "image", "wgpu"] }
 rust_decimal = { version = "1.39.0", features = ["std", "maths"] }
 rust_decimal_macros = "1.39.0"
 
