--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 /.vscode
 /.idea
+/.tmp
 /target
-Cargo.lock
-*.lock
 /dist
-/packaging/appimage/AppDir
-/packaging/appimage/appimagetool-x86_64.AppImage
-/packaging/appimage/Calcurus.AppImage
-/packaging/package.sh
