feat: migrate from iced.rs to libcosmic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,51 @@
 [package]
 name = "calcurus"
+description = "A basic GUI calculator based on libcosmic."
 authors = ["Suyog Tandel(RedddFoxxyy)"]
 license-file = "LICENSE-CC"
-version = "0.3.1"
+version = "0.4.0"
 edition = "2024"
+repository = "https://github.com/RedddFoxxyy/Calcurus"
 
 [dependencies]
-# iced = { version = "0.13.1", features = ["image", "debug", "smol"] }
-iced = { version = "0.13.1", features = ["web-colors", "webgl", "advanced", "image", "wgpu"] }
+# For libcalcurus:
 rust_decimal = { version = "1.39.0", features = ["std", "maths"] }
 rust_decimal_macros = "1.39.0"
+
+# For libcosmic:
+futures-util = "0.3.31"
+i18n-embed = { version = "0.16", features = [
+    "fluent-system",
+    "desktop-requester",
+] }
+i18n-embed-fl = "0.10"
+open = "5.3.2"
+rust-embed = "8.8.0"
+tokio = { version = "1.48.0", features = ["full"] }
+
+[dependencies.libcosmic]
+git = "https://github.com/pop-os/libcosmic.git"
+# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
+features = [
+    # Accessibility support
+    "a11y",
+    # About widget for the app
+    "about",
+    # Uses cosmic-settings-daemon to watch for config file changes
+    "dbus-config",
+    # Support creating additional application windows.
+    "multi-window",
+    # On app startup, focuses an existing instance if the app is already open
+    "single-instance",
+    # Uses tokio as the executor for the runtime
+    "tokio",
+    # Windowing support for X11, Windows, Mac, & Redox
+    "winit",
+    # Add Wayland support to winit
+    "wayland",
+    # GPU-accelerated rendering
+    "wgpu",
+]
 
 [profile.release]
 codegen-units = 1 # Allows LLVM to perform better optimization.
