--- a/.github/workflows/wasm_release.yml
+++ b/.github/workflows/wasm_release.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       # Step 1: Check out the repository code
